infra/k8s/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: rate-limit
  namespace: monorepo
spec:
  rateLimit:
    average: 30
    period: 1m
    burst: 10
    sourceCriterion:
      ipStrategy:
        depth: 0
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api
  namespace: monorepo
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`api.rafaellapontes.com.br`)
      kind: Rule
      middlewares:
        - name: rate-limit
      services:
        - name: web
          port: 80
  tls:
    certResolver: letsencrypt
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frontend
  namespace: monorepo
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`app.rafaellapontes.com.br`)
      kind: Rule
      services:
        - name: web
          port: 80
  tls:
    certResolver: letsencrypt
